fixed empty responses and added getUserDetails resource
